--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TestGit2</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>My header</h1>
+      <h1>My header</h1>
     </header>
+    <main>
+      <span>Home page</span>
+    </main>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
