--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
       <h1>My header</h1>
     </header>
     <main>
-      <span>Home page</span>
+      <span>Main page</span>
     </main>
+    <footer>
+      <span>Footer</span>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
